// daft.fm Database Schema for dbdiagram.io
// Paste this at: https://dbdiagram.io/d

Table artists {
  id varchar [pk, note: 'MusicBrainz ID (UUID)']
  name varchar [not null]
  slug varchar [unique, not null]
  country varchar
  formed_year integer
  genres json [note: 'Array of genre strings']
  external_ids json [note: 'wikidata_id, freebase_id, discogs_artist_id, etc.']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table albums {
  id varchar [pk, note: 'MusicBrainz Release Group ID (UUID)']
  title varchar [not null]
  slug varchar [unique, not null]
  artist_id varchar [not null, ref: > artists.id]
  release_date timestamp
  track_count integer
  cover_art_url varchar
  external_ids json [note: 'wikidata_id, discogs_master_id, spotify_album_id, etc.']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table songs {
  id varchar [pk, note: 'MusicBrainz Recording ID (UUID)']
  title varchar [not null]
  slug varchar [unique, not null]
  duration integer [note: 'Duration in seconds']
  artist_id varchar [not null, ref: > artists.id]
  album_id varchar [ref: > albums.id, note: 'Optional - singles might not have album']
  release_date timestamp
  external_ids json [note: 'isrc, genius_song_id, spotify_track_id, etc.']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}